  You can set it to `true` to temporarily restore the legacy HTML markup
  for wikitext headings in the output from the Parser, in case you find
  that your wiki's content or an extension is incompatible with the new markup.
  More information: https://www.mediawiki.org/wiki/Heading_HTML_changes
  This option will be removed in a future release.
* (T386210) $wgAddGroups and $wgRemoveGroups now use the correct merge strategy
  of `array_merge_recursive`. This lets extensions add entries from the
  extension.json file, which would previously be silently ignored.
* (T382987) $wgDnsBlacklistUrls now defaults to an empty array. See the comment
  in the "Configuration changes for system administrators" section above.
* (T387856) $wgEnotifImpersonal and $wgEnotifMaxRecips are now deprecated.

==== Removed configuration ====

* wgResourceLoaderUseObjectCacheForDeps, deprecated in 1.43, has been removed.
  It is now always enabled (T343492).
* wgBaseDirectory, unused, has been removed in favour of MW_INSTALL_PATH.
  If a variable value is needed, inject an optional parameter instead.
* …

=== New user-facing features in 1.44 ===

* (T363538, T204792) New parser functions {{#interlanguagelink:prefix|title}}
  and {{#interwikilink:prefix|title|caption}} to unambiguously create
  interlanguage and interwiki links, respectively, even when the "prefix"
  might conflict with a namespace on the local wiki.
* (T326057) Attempting to create a redirect to a nonexistent page will now
  result in a warning.
* (T33951) The Interwiki extension has been moved to MediaWiki core. It is now
  possible to view and edit the interwiki table without installing an extension.
  $wgInterwikiCentralDB and $wgInterwikiCentralInterlanguageDB have been
  removed, use $wgVirtualDomainsMapping['virtual-interwiki'] and
  $wgVirtualDomainsMapping['virtual-interwiki-interlanguage'] instead.
  $wgInterwikiViewOnly has been removed, (un)assign "interwiki" right instead.